# protun

./: .gitignore  .gitmodules  .semgrepignore  CODEOWNERS  Cargo.toml  README.md  build.rs  uniffi-bindgen.rs  uniffi.toml
.cargo/: config.toml
sdk-android/: README.md  build.gradle.kts  settings.gradle.kts
sdk-android/gradle/: libs.versions.toml
sdk-android/sample-app/: build.gradle.kts
sdk-android/sample-app/src/main/java/me/proton/vpn/sdk/sample_app/: AppSystemEventHandler.kt  MainActivity.kt  SampleApp.kt  VpnNotificationFactory.kt
sdk-android/sample-app/src/main/java/me/proton/vpn/sdk/sample_app/data/: ConfigStore.kt  VpnConfig.kt
sdk-android/sample-app/src/main/java/me/proton/vpn/sdk/sample_app/di/: AppModule.kt
sdk-android/sample-app/src/main/java/me/proton/vpn/sdk/sample_app/ui/: MainScreen.kt  MainViewModel.kt  RunWithVpnPermission.kt
sdk-android/sample-app/src/main/java/me/proton/vpn/sdk/sample_app/ui/theme/: Color.kt  Theme.kt  Type.kt
sdk-android/sample-app/src/main/res/values/: strings.xml
sdk-android/sdk/: build.gradle.kts
sdk-android/sdk-rust/: build.gradle.kts
sdk-android/sdk/src/main/: AndroidManifest.xml
sdk-android/sdk/src/main/java/me/proton/vpn/sdk/: ProtonVpnConnectionManagerImpl.kt
sdk-android/sdk/src/main/java/me/proton/vpn/sdk/api/: Events.kt  ForegroundServiceNotificationFactory.kt  InterfaceConfig.kt  Logger.kt  Peer.kt  ProtonVpnConnectionManager.kt  ProtonVpnSdk.kt  State.kt  SystemEventHandler.kt
sdk-android/sdk/src/main/java/me/proton/vpn/sdk/internal/: DependencyContainer.kt  UniffiTypeConversions.kt
sdk-android/sdk/src/main/java/me/proton/vpn/sdk/service/: ConnectionManager.kt  ProTunVpnService.kt
sdk-android/sdk/src/main/java/me/proton/vpn/sdk/service/usecases/: EstablishTun.kt  NetworkObserver.kt
src/: lib.rs
src/api/: connection.rs  connection_unix.rs  events.rs  local_agent.rs  logger.rs  mod.rs  state.rs  type_conversions.rs
src/api/test_utils/: mod.rs  muon_test_auth.rs  test_config_parser.rs
src/api/tests/: dummy_connection_tests.rs  dummy_local_agent_tests.rs  dummy_protocol.rs  mod.rs  real_connection_tests.rs  test_clocks.rs  test_helpers.rs
src/api/windows/: connection_windows.rs  mod.rs  protun_error.rs  state_changed_callback.rs
src/connection/: constants.rs  factory_unix.rs  local_agent_handler.rs  mod.rs  network_recovery_handler.rs  pcap_stream.rs  pvpn_client.rs  pvpn_connection.rs  pvpn_state_handler.rs  sanitized_peers.rs  streams.rs  time.rs  util.rs
src/connection/mio/: mod.rs  socket_factory_unix.rs  streams.rs  tcp.rs  tun_apple.rs  tun_source.rs  tun_unix.rs  udp.rs
src/connection/tests/: local_agent_handler_tests.rs  mod.rs  network_recovery_handler_tests.rs  util_tests.rs
src/connection/windows/: mod.rs  streams.rs  tcp.rs  tun_windows.rs  udp.rs
src/connection/windows/helpers/: local_ip_finder.rs  mod.rs  poll_waker.rs  routes.rs  routing_table.rs  socket_handle.rs  winsock.rs
src/connection/windows/helpers/windows_api/: adapter_configs.rs  dns.rs  ipv6.rs  local_address.rs  mod.rs
src/connection/windows/helpers/wintun/: constants.rs  mod.rs  wintun_session.rs
src/example/: binary_blob_file.rs  sample.rs
src/local_agent/: local_agent.rs  mod.rs
src/utils/: common.rs  mod.rs  vector.rs
src/utils/windows/: io_error.rs  mod.rs  registry_editor.rs
vpn-core-android/: README.md  settings.gradle.kts
vpn-core-android/gradle/: libs.versions.toml
vpn-core-android/gradle/wrapper/: gradle-wrapper.properties
vpn-core-android/sample-app/: build.gradle.kts
vpn-core-android/sample-app/src/main/: AndroidManifest.xml
vpn-core-android/sample-app/src/main/java/me/proton/vpn/core/sample_app/: AppSystemEventHandler.kt  MainActivity.kt  SampleApp.kt  VpnNotificationFactory.kt
vpn-core-android/sample-app/src/main/java/me/proton/vpn/core/sample_app/data/: ConfigStore.kt  VpnConfig.kt
vpn-core-android/sample-app/src/main/java/me/proton/vpn/core/sample_app/di/: AppModule.kt
vpn-core-android/sample-app/src/main/java/me/proton/vpn/core/sample_app/ui/: MainScreen.kt  MainViewModel.kt  RunWithVpnPermission.kt
vpn-core-android/sample-app/src/main/java/me/proton/vpn/core/sample_app/ui/theme/: Color.kt  Theme.kt  Type.kt
vpn-core-android/vpn-core/: build.gradle.kts
vpn-core-android/vpn-core-rust/: build.gradle.kts  consumer-rules.pro
vpn-core-android/vpn-core/src/main/java/me/proton/vpn/core/: ProtonVpnConnectionManagerImpl.kt
vpn-core-android/vpn-core/src/main/java/me/proton/vpn/core/api/: Events.kt  ForegroundServiceNotificationFactory.kt  InterfaceConfig.kt  Logger.kt  Peer.kt  ProtonVpnConnectionManager.kt  ProtonVpnCore.kt  State.kt  SystemEventHandler.kt
vpn-core-android/vpn-core/src/main/java/me/proton/vpn/core/internal/: DependencyContainer.kt  PersistentCache.kt  UniffiTypeConversions.kt  Utils.kt
vpn-core-android/vpn-core/src/main/java/me/proton/vpn/core/service/: ConnectionManager.kt  ProTunVpnService.kt
vpn-core-android/vpn-core/src/main/java/me/proton/vpn/core/service/usecases/: EstablishTun.kt  NetworkObserver.kt
