[package]
name = "protun"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
libc = { version = "0.2.180", optional = true }
local-agent-rs = { path = "local-agent-rs/local_agent_rs", optional = true }
log = "0.4.29"
mio = { version = "1.1.1", features = ["net", "os-poll", "os-ext"], optional = true }
pvpnclient = { path = "libpvpnclient" }
socket2 = { version = "0.6.1", optional = true }
uniffi = { version = "0.31.0", features = ["cli"], optional = true }
rand = "0.9.2"

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"], optional = true }

[dev-dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11.5"
test-log = "0.2.18"
rand = "0.9.2"
pvpnclient = { path = "libpvpnclient", features = ["testing"] }

[features]
default = ["unix"]
unix = ["dep:libc", "dep:socket2", "mio", "uniffi"]
android = ["unix"]
apple = ["unix"]
linux = ["unix"]
windows = []
uniffi = ["dep:uniffi"]
local-agent = ["dep:local-agent-rs"]
local-agent-uniffi = ["local-agent", "uniffi", "local-agent-rs/uniffi"]
mio = ["dep:mio"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi"]
