[package]
name = "protun"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
libc = { version = "0.2.180", optional = true }
log = "0.4.29"
mio = { version = "1.1.1", features = ["net", "os-poll", "os-ext"], optional = true }
pvpnclient = { path = "libpvpnclient" }
socket2 = { version = "0.6.1", optional = true }
uniffi = { version = "0.29.4", features = ["cli"], optional = true } # 0.29.4 is the highest uniffi version supported for C#: https://github.com/NordSecurity/uniffi-bindgen-cs
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true  }
thiserror = { version = "2", default-features = false, optional = true }
uuid = { version = "1", optional = true }
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
], optional = true }
winreg = { version = "0.55", optional = true }
wintun = { version = "0.5.1", optional = true }

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"], optional = true } # 0.29.4 is the highest uniffi version supported for C#: https://github.com/NordSecurity/uniffi-bindgen-cs

[dev-dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11.5"
test-log = "0.2.18"
rand = "0.9.2"
pvpnclient = { path = "libpvpnclient", features = ["testing"] }

[features]
default = ["unix"]
unix = ["dep:libc", "dep:socket2", "mio", "uniffi"]
android = ["unix"]
apple = ["unix"]
linux = ["unix"]
windows = ["dep:serde", "dep:serde_json", "dep:socket2", "dep:thiserror", "dep:uuid", "dep:windows", "dep:winreg", "dep:wintun", "uniffi"]
uniffi = ["dep:uniffi"]
mio = ["dep:mio"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi"]
