[package]
name = "protun"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
base64 = { version = "0.22", default-features = false, features = ["alloc"], optional = true }
libc = { version = "0.2.180", optional = true }
log = "0.4.29"
mio = { version = "1.1.1", features = ["net", "os-poll", "os-ext"], optional = true }
pvpnclient = { version = "1.2.0", registry = "proton" }
proton-vpn-local-agent = { version = "0.7", registry = "proton", optional = true }
rustls-pki-types = { version = "1.14", optional = true, default-features = false }
socket2 = { version = "0.6.1", optional = true }
uniffi = { version = "0.29.4", features = ["cli"], optional = true } # 0.29.4 is the highest uniffi version supported for C#: https://github.com/NordSecurity/uniffi-bindgen-cs
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true  }
smallvec = "1.15.1"
thiserror = { version = "2", default-features = false, optional = true }
derive_more = { version = "2", features = ["debug"] }
tokio = { version = "1.52.0", features = ["rt", "net", "time"], optional = true }
async-compat = { version = "0.2.5", optional = true }
futures = { version = "0.3.32", optional = true }
ini = { version = "1.3.0", optional = true }
uuid = { version = "1", optional = true }
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
], optional = true }
winreg = { version = "0.55", optional = true }
wintun = { version = "0.5.1", optional = true }

[dependencies.muon]
version = "2"
registry = "proton"
features = ["transport-hyper", "lenient"]
default-features = false
optional = true

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"], optional = true } # 0.29.4 is the highest uniffi version supported for C#: https://github.com/NordSecurity/uniffi-bindgen-cs
winresource = { version = "0.1", optional = true }

[dev-dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11.5"
test-log = "0.2.18"
rand = "0.9.2"
pvpnclient = { version = "1.2.0", features = ["testing", "local-agent"], registry = "proton" }
protun = { path = ".", features = ["test_utils"] }

[features]
default = ["unix", "local-agent"]
unix = ["dep:libc", "dep:socket2", "mio", "uniffi"]
android = ["unix"]
apple = ["unix"]
linux = ["unix"]
windows = ["dep:serde", "dep:serde_json", "dep:socket2", "dep:thiserror", "dep:uuid", "dep:windows", "dep:winreg", "dep:wintun", "uniffi", "winresource"]
uniffi = ["dep:uniffi"]
mio = ["dep:mio"]
local-agent = ["pvpnclient/local-agent", "dep:proton-vpn-local-agent", "dep:rustls-pki-types", "dep:muon"]
real-connection-tests = ["test_utils"]
# Development-only feature to help establish proton session in sample code.
test_utils = ["dep:tokio", "dep:async-compat", "dep:futures", "dep:muon", "dep:ini", "dep:base64"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi"]

[[example]]
name = "sample"
path = "src/example/sample.rs"
required-features = ["unix", "local-agent", "test_utils"]
